--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
     "build": "tsdown src/index.ts --format cjs,esm",
     "test": "vitest run",
     "prepublishOnly": "pnpm run build",
-    "release": "bumpp --commit --push --tag && pnpm publish"
+    "release": "bumpp"
   },
   "peerDependencies": {
     "vue": "^3.2.0"
   },
   "devDependencies": {
-    "bumpp": "^8.2.1",
+    "bumpp": "^10.2.2",
     "jsdom": "^26.1.0",
     "tsdown": "^0.13.3",
     "typescript": "5.9.2",
